[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1 ", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = true, version = "0.12.0" }